# simple-big-2-simulator

./: README.md  app.py  game.py  pyproject.toml
static/: index.html  script.js  style.css
